--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-black
-flake8
-isort
-pip
-python-dotenv
+# local package
 -e .
+
+# external requirements
+click
+Sphinx
+coverage
+awscli
+flake8
+python-dotenv>=0.5.1
